Version history

1.22
- Fixes issue where restored window now should be properly maximized
- Improved error handling when external command fails, e.g. "Realign everything", "Realign selected sequences"
- Add function "Replace terminal GAPs into missing char (?)"
- Add Function "Replace missing char (?) into GAP (-)"
- Change "Primer" menu to "Tool" menu and move "Primer" to this as a sumbeny
- Minor changes in Linux start-script
- Minor changes in Windows package scripts

1.21
- Read fastq-files (quality values are ignored)
- Allow pasting any data into alignment window (not only well formatted fasta-sequences)
- Improved start script for Linux, stdout redirected to /dev/null unless debug (-d) is specified
- Fixed some issues when building code from java-source

1.20
- Improved selection position display for very large sequences (before position was limited to 1 milj) - now no limit
- Fixed bug making it impossible to manually set sequence type on large on-file-sequences
- Fixed bug where menues were disabled after large large on-file-sequences were loaded
- Added support for java 9 on windows by updating launch4java
- Fixed bug missing javax.activation-library when running on JVM 9

1.19
- Better automatic detection wether alignment is Nucleotide or Amino-Acid
- Menu alternative to manually change alignment to Nucleotide or AminoAcid
- Confirmation box when deleting all gaps in all sequences
- Go to position function
- Courier font on OS X regardless of Java VM
- Some changes on OS X retina screens when using Oracle Java
- Fixed hide checkboxes issue where "clear all" in settings didn't clear all

1.18.1

- Fixed bug in complement translation. IUPAC-K is now translated into M instead of previously S
- Updated osX application stub to make it recognize Oracle Java VM and not only Apple Java VM

1.18

- Big rewrite of code handling selection. Improvements and more standardized mouse selection of sequences (compared to other software)